# internal/data/entities/house.go
@@ -3,14 +3,15 @@ package entities
 import "time"
 
 type House struct {
-	Id         string    `json:"id"`
-	OwnerId    string    `json:"owner_id"`
-	InviteCode string    `json:"invite_code"`
-	Name       string    `json:"name"`
-	Type       HouseType `json:"type"`
-	MemberIds  []string  `json:"member_ids"`
-	CreatedOn  time.Time `json:"created_on"`
-	UpdatedOn  time.Time `json:"updated_on"`
+	Id             string    `json:"id"`
+	OwnerId        string    `json:"ownerId"`
+	InviteCode     string    `json:"inviteCode"`
+	Name           string    `json:"name"`
+	Type           HouseType `json:"type"`
+	MemberIds      []string  `json:"memberIds"`
+	MaxMemberCount int       `json:"maxMemberCount"`
+	CreatedOn      time.Time `json:"createdOn"`
+	UpdatedOn      time.Time `json:"updatedOn"`
 }
 
 type HouseType string
